# conformal-data-cleaning

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
conformal_data_cleaning/: __init__.py  config.py  data.py  jenga_extension.py  utils.py
conformal_data_cleaning/cleaner/: __init__.py  _base.py  conformal.py  machine_learning.py  pyod.py
conformal_data_cleaning/evaluation/: utils.py
data/: .gitignore  binary_openml_ids.json  dataset_descriptions.csv  multi_class_openml_ids.json  regression_openml_ids.json
data/corrupted/: .gitignore
data/corrupted/SwappedValues/: .gitignore
garf/: .dockerignore  README.md  att_reverse.py  config.py  create_db.py  main.py  requirements.txt  rule_sample.py
garf/SeqGAN/: get_config.py  models.py  rl.py  train.py  utils.py
infrastructure/docker/: Dockerfile  Dockerfile.garf
infrastructure/helm/conformal-data-cleaning/: Chart.yaml  values.yaml
infrastructure/helm/conformal-data-cleaning-garf/: Chart.yaml  values.yaml
infrastructure/helm/conformal-data-cleaning-garf/templates/: _helpers.tpl  job.yaml
infrastructure/k8s/: jupyter-pod.yaml  pvc-data.yaml  pvc-models.yaml  pvc-notebooks.yaml  pvc-processed.yaml  pvc-results.yaml
notebooks/: dataset_statistics.ipynb  load_corrupt_and_test_datasets.ipynb
notebooks/evaluation/: 1_get_and_shape_results.ipynb  2_task_percent_improvements.ipynb  3_error_detection.ipynb  4_which_is_the_best_model.ipynb  5_plotting.ipynb
results/: .gitignore
scripts/: deploy_experiments.py  hyperparameters.py  run_experiment.py
(+2 files in other folders)
